fix overflow hidden

--- a/sass/modules/_comment-list.scss
+++ b/sass/modules/_comment-list.scss
@@ -89,7 +89,7 @@
 /* Block Comment End */
 .latest-comments {
   .comment-respond {
-    margin-top: 94px;
+    margin-top: 80px;
   }
   li {
 
